# process_bottleneck

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py  scenario_a_kyc.ipynb  scenario_b_warehouse.ipynb  simulation_framework.py  summary.md  validate_project.py
.github/workflows/: validation.yml
docs/: calibration_playbook.md  interview_guide.md  methodology.md  portfolio_case_study.md
outputs/: cost_benefit.csv  erlang_c_validation.csv  event_log_sample.csv  executive_dashboard.html  item_log_sample.csv  kpi_summary.csv  kyc_arrival_sensitivity.csv  kyc_mu_sensitivity.csv  results_comparison.csv  stress_test.csv  warehouse_arrival_sensitivity.csv  warehouse_mu_sensitivity.csv
tests/: test_simulation_framework.py
